Custom expression editor: initial overflow to fix text cut-off

--- a/frontend/src/metabase/query_builder/components/expressions/expressions.css
+++ b/frontend/src/metabase/query_builder/components/expressions/expressions.css
@@ -1,3 +1,7 @@
+.expression-editor-textfield .ace_editor {
+  overflow: initial;
+}
+
 .expression-editor-textfield .ace_content * {
   font-family: monospace !important;
 }
